minio and swagger
