# models/paginatedImagesResponse.go
@@ -1,0 +1,8 @@
+package models
+
+type PaginatedImagesResponse struct {
+	Page   int     `json:"page"`
+	Limit  int     `json:"limit"`
+	Total  int64   `json:"total"`
+	Images []Image `json:"images"`
+}
